--- a/Algebra.tex
+++ b/Algebra.tex
@@ -105,6 +105,16 @@
 % Bullet delle liste puntate
 \renewcommand\labelitemi{$ \blacktriangleright $}
 
+% Coso
+%\usepackage[
+%active,
+%generate=file,
+%extract-env={theorem, prop},
+%extract-cmd=section,
+%extract-cmd=subsection,
+%extract-cmd=subsubsection,
+%]{extract}
+
 \begin{document}
 
 \newgeometry{left=3cm,bottom=1cm}
