--- a/gruppi.tex
+++ b/gruppi.tex
@@ -684,7 +684,7 @@ pertanto, in questo caso, esiste \emph{un unico} gruppo di ordine $ pq $ non abe
 \subsection{Teorema di Sylow}
 \begin{multicols}{2}
 	\begin{definition}
-		Chiamiamo $ p $-sylow ogni $ p $-sottogruppo di ordine massimo. Ovvero $ H < G $, dove $ |G| = p^mn $ con $ (m, n) = 1 $ e $ |H| = p^m $.
+		Chiamiamo $ p $-sylow ogni $ p $-sottogruppo di ordine massimo. Ovvero $ H < G $, dove $ |G| = p^mn $ con $ (p, n) = 1 $ e $ |H| = p^m $.
 	\end{definition}
 \begin{theorem}[di Sylow]\label{sylow}
 	Sia G un gruppo finito di ordine $ |G| = p^nm  $, dove $ p $ è primo e $ m $ è un intero a lui coprimo: $ (p, m) = 1 $. Allora sappiamo che:
