--- a/gruppi.tex
+++ b/gruppi.tex
@@ -568,7 +568,7 @@ ben definita perché $ C_4 $, avendo indice $ 2 $, è normale in $ G $. Poiché 
 
 \begin{itemize}
 	\item $ \left[\varphi_h =  id, \, \text{ord}(h) =2\right] $. Dunque gli elementi di $ C_4 $ commutano con $ h $, l'intersezione tra $ C_4 $ e $ \langle h \rangle $ è banale e il loro prodotto genera $ G $ per ragioni di cardinalità, pertanto \[ G \cong  \langle h \rangle\times C_4  \cong  \mathbb{Z}_2\times\mathbb{Z}_4 \]
-	\item $ \left[\varphi_h =  id, \, \text{ord}(h) =4\right] $. Abbiamo che $ gh $ è non vive qua dentro e il gruppo è abeliano.
+	\item $ \left[\varphi_h =  id, \, \text{ord}(h) =4\right] $. In questo caso è facile trovare tutti gli elementi e mostrare che il gruppo dev'essere abeliano.
 	\item $ \left[\varphi_h =  id^{-1}, \, \text{ord}(h) =2\right] $. Abbiamo che $ hgh = g^{-1} $, quindi per la nostra caratterizzazione dei gruppi diedrali \[ G \cong D_4 \]
 	\item $ \left[\varphi_h =  id^{-1}, \, \text{ord}(h) =4\right] $. Anche ord$ (gh) = 4 $. Infatti
 	\[ e = ghgh = ghgh^{-1}hh = hh \neq e \]
