--- a/anelli.tex
+++ b/anelli.tex
@@ -368,7 +368,7 @@ Inoltre, ovviamente, contiene l'ideale di partenza: $ I \subseteq \sqrt{I} $.
 
 \end{multicols}
 
-\subsection{Domini}
+\subsection{Dominii}
 \begin{multicols}{2}
 
 \subsubsection{Campo dei quozienti. $ \Q(A) $}
@@ -483,7 +483,7 @@ Riassumiamo in uno schemino tutte le relazioni legate alla divisibilità:
 \end{tikzpicture}
 \end{center}
 
-\subsection{Domini Speciali}
+\subsection{Dominii Speciali}
 \begin{multicols}{2}
 	Diamo un po' di definizioni insieme
 	\begin{definition}
@@ -550,9 +550,9 @@ Riassumiamo in uno schemino tutte le relazioni legate alla divisibilità:
 	Prendiamo un ideale $ I $ di un \textsc{ed} e sia $ x $ il suo elemento di grado minimo. Vogliamo dimostrare che 
 	\[ I = (x) \]
 	per assurdo. Supponiamo che esista $ y \in I $ tale che
-	\[ x = qy + r \]
+	\[ y = qx + r \]
 	con $ r \neq 0 $, abbiamo allora necessariamente che $ d(r) < d(x) $. Purtroppo però
-	\[ r = x - qy \in I \]
+	\[ r = y - qx \in I \]
 	contraddice la minimalità di $ x $.
 \end{proof}
 
@@ -579,7 +579,7 @@ Riassumiamo in uno schemino tutte le relazioni legate alla divisibilità:
 
 \subsubsection{Dominio a Fattorizzazione Unica}
 
-\textbf{MCD.} Negli anelli \textsc{ufd} l'$ \textsc{mcd}(a, b) $ esiste, perché possiamo caratterizzarlo attraverso la fattorizzazione, come sugli interi. Però non è detto che appartenga all'ideale $ (a, b) $. Per esempio: in $ \Z[x] $ abbiamo che $ (2, x) = 1 $ ma non esistono polinomi $ f, g $ tali che
+\textbf{MCD.} Negli anelli \textsc{ufd} l'$ \textsc{mcd}(a, b) $ esiste, perché possiamo caratterizzarlo attraverso la fattorizzazione, come sugli interi. Però non è detto che appartenga all'ideale $ (a, b) $. Per esempio: in $ \Z[\,x\,] $ abbiamo che $ (2, x) = 1 $ ma non esistono polinomi $ f, g $ tali che
 \[ 1 = 2f + xg \]
 infatti valutando l'espressione in $ 0 $ otteniamo $ 1 = 2f(0) $.
 
