--- a/campi.tex
+++ b/campi.tex
@@ -111,7 +111,7 @@ Tuttavia, aggiungendo un'ipotesi riusciamo a invertire il risultato:
 	\[ \mu = a_0 + a_1 x + \dots + a_n x^n \]
 	su cui si annulla. A questo punto, possiamo costruire la sottoestensione
 	\[ F_0 = K(a_0,\, \dots,\, a_n) \subseteq F \]
-	che, essendo finitamente generata, ci permette di invocare il lemma \ref{3} per concludere che è algebrica! Infine, possiamo aggiungere ad $ F_0 $ la radice di $ \mu $ da cui siamo partiti, producendo un'altra estensione finita
+	che, essendo finitamente generata, ed algebrica, ci permette di invocare il lemma \ref{3} per concludere che è finita! Infine, possiamo aggiungere ad $ F_0 $ la radice di $ \mu $ da cui siamo partiti, producendo un'altra estensione finita
 	\[\begin{tikzcd}[column sep=0.25cm]
 	K \arrow [r,-] &
 	F_0 \arrow[r,-] &
