--- a/campi.tex
+++ b/campi.tex
@@ -159,7 +159,7 @@ Tuttavia, aggiungendo un'ipotesi riusciamo a invertire il risultato:
 		e definiamo l'estensione a partire da $ K[\, x \,] $ in modo che
 		\begin{align*}
 		\Phi\colon &K[\, x \,] \to \bar{K} \\
-		& 1 \mapsto 1 \\
+		& k \mapsto \varphi(k) \\
 		& x \mapsto \beta 
 		\end{align*}
 		imponendo che il nucleo corrisponda con l'ideale generato dal polinomio minimo di $ \alpha $
