--- a/campi.tex
+++ b/campi.tex
@@ -289,7 +289,7 @@ Introduciamo ora un'altra utile proprietà di alcune estensioni
 	 \[ F = K(\alpha_1, \dots, \alpha_n ) \]
 	ci basta dunque prendere la famiglia di polinomi $ \{\mu_{\alpha_i} \}_{i} $ e, per il teorema precedente, questi polinomi si spezzano in $ F $.
 	
-	$ \Leftarrow $. Supponiamo che $ F $ sia il campo di spezzamento della famiglia di polinomi $ \{f_i\}_{i \in I} $, con radici $ \{\alpha_i,j\}_{i,j} $. Abbiamo che 
+	$ \Leftarrow $. Supponiamo che $ F $ sia il campo di spezzamento della famiglia di polinomi $ \{f_i\}_{i \in I} $, con radici $ \{\alpha_{i,j}\}_{i,j} $. Abbiamo che 
 	\[F = K(\{\alpha_{i, j}\})\]
 	 Preso un $ K $-automorfismo
 	 \[ \varphi \colon F \to \bar{K} \]
@@ -456,7 +456,7 @@ e chiediamoci:
 		& \LR \sigma( L^H) = L^H & \forall\sigma \in \Gal{L/K}
 	\end{align*}
 	ovvero se e solo se $ L^H $ viene rispettato da tutti i $ K $-automorfismi di $ L $, ossia se e soltanto se è a sua volta un'estensione di Galois. In tal caso, ci concentriamo sulla funzione di restrizione
-	\fun{\texttt{res}}{\Gal{L/K}}{\Gal{L^H/K}}{\sigma}{\sigma_{|H}}
+	\fun{\texttt{res}}{\Gal{L/K}}{\Gal{L^H/K}}{\sigma}{\sigma_{|L^H}}
 	che è un omomorfismo di nucleo
 	\[ \ker \texttt{res} = \Gal{L/L^H} \]
 	dunque il Primo Teorema di Omomorfismo ci serve la tesi.
